--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "ts-fsrs": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
