pro 동기화 수정

--- a/.env
+++ b/.env
@@ -5,6 +5,13 @@
 #GOOGLE_CLOUD_PROJECT="gen-lang-client-0241987025"# 확인된 구글 클라우드 Project ID 입력
 
 #jmdan
+#GEMINI_MODEL="gemini-2.5-pro"# 혹은 gemini-2.5-pro 원하는 모델 입력
+#GEMINI_API_KEY="AIzaSyDD8RZCfeH5uN_v75ufcHukL2tNW6g0L6Q"# 확인된 API Key 입력
+#GOOGLE_CLOUD_PROJECT="gen-lang-client-0099566876"# 확인된 구글 클라우드 Project ID 입력
+
+#mak
 GEMINI_MODEL="gemini-2.5-pro"# 혹은 gemini-2.5-pro 원하는 모델 입력
-GEMINI_API_KEY="AIzaSyDD8RZCfeH5uN_v75ufcHukL2tNW6g0L6Q"# 확인된 API Key 입력
-GOOGLE_CLOUD_PROJECT="gen-lang-client-0099566876"# 확인된 구글 클라우드 Project ID 입력
+GEMINI_API_KEY="AIzaSyB8bs9R3YNw-jGs7g7nv9grvAso2xc2JTE"# 확인된 API Key 입력
+GOOGLE_CLOUD_PROJECT="gen-lang-client-0727748438"# 확인된 구글 클라우드 Project ID 입력
+
+
