--- a/.env
+++ b/.env
@@ -10,8 +10,12 @@
 #GOOGLE_CLOUD_PROJECT="gen-lang-client-0099566876"# 확인된 구글 클라우드 Project ID 입력
 
 #mak
-GEMINI_MODEL="gemini-2.5-pro"# 혹은 gemini-2.5-pro 원하는 모델 입력
-GEMINI_API_KEY="AIzaSyB8bs9R3YNw-jGs7g7nv9grvAso2xc2JTE"# 확인된 API Key 입력
-GOOGLE_CLOUD_PROJECT="gen-lang-client-0727748438"# 확인된 구글 클라우드 Project ID 입력
+#GEMINI_MODEL="gemini-2.5-pro"# 혹은 gemini-2.5-pro 원하는 모델 입력
+#GEMINI_API_KEY="AIzaSyB8bs9R3YNw-jGs7g7nv9grvAso2xc2JTE"# 확인된 API Key 입력
+#GOOGLE_CLOUD_PROJECT="gen-lang-client-0727748438"# 확인된 구글 클라우드 Project ID 입력
 
+#andim
+GEMINI_MODEL="gemini-2.5-pro"# 혹은 gemini-2.5-pro 원하는 모델 입력
+GEMINI_API_KEY="AIzaSyDq8jjipHK0YQ0_MC-cldvF-zqlBhvCD58"# 확인된 API Key 입력
+GOOGLE_CLOUD_PROJECT="gen-lang-client-0798210737"# 확인된 구글 클라우드 Project ID 입력
 
