--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "idb-keyval": "^6.2.0",
     "konva": "^8.4.0",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.10.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.12",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.30.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.0",
     "ts-fsrs": "^5.2.1",
     "web-vitals": "^2.1.4"
   },
